style: fixed the alignment of the page

--- a/components/NotifItem.module.css
+++ b/components/NotifItem.module.css
@@ -3,15 +3,15 @@
   justify-content: center;
   flex-direction: column;
   gap: 0.5em;
-  
+
   width: 100%;
   min-width: min-content;
   max-width: 1080px;
-  
+
   padding: 1em;
   border-radius: 1em;
   background-color: hsl(var(--b3));
-  margin-block: 1em;
+  margin-block: 0.5em;
 }
 
 .footer {
